SLI-497 Bundle analyzers at the root of the plugin ZIP